<resources>
    <string name="app_name">Om Ahmed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover_delicious_recipes">Discover Delicious Recipes</string>
    <string name="explore_thousands_of_traditional_and_modern_dishes_at_your_fingertips">Explore thousands of traditional and modern dishes at your fingertips.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="personalized_planning">Personalized Planning</string>
    <string name="plan_your_meals_easily_and_stay_organized_every_day">Plan your meals easily and stay organized every Day</string>
    <string name="ai_kitchen_assistant">Access Anytime, Even Offline</string>
    <string name="chat_with_om_ahmed_ai_to_get_instant_recipe_ideas_cooking_tips_and_meal_plan_help">Stay connected to your Favourites And Plans, even when you\'re not connected to the internet.</string>
    <string name="get_started">Get Started</string>
    <string name="cooking_with_love">Cooking With Love</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="continue_as_guest">Continue As Guest</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t Have An Account ?</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="full_name">Full Name</string>
    <string name="meal_of_the_day">Meal Of The Day</string>
    <string name="view_details">View Details</string>
    <string name="categories">Categories</string>
    <string name="daily_recommendations">Daily Recommendations</string>
    <string name="add_to_planner">ADD TO PLANNER</string>
    <string name="measurement">MEASUREMENT</string>
    <string name="ingredient">INGREDIENT</string>
    <string name="selected_day_meals">Selected Day Meals</string>
    <string name="upload_data">Upload Data</string>
    <string name="logout">Logout</string>
    <string name="suggestions">Suggestions</string>
    <string name="download_data">Download Data</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="login_sign_up">Login / Sign Up</string>
    <string name="you_must_be_logged_in_to_access_this_feature">You must be logged in to access this feature.</string>
    <string name="food_image_of_the_login_page">food image of the login page</string>
    <string name="food_image_of_register">food_image_of_register</string>
    <string name="retry">Retry</string>
    <string name="we_couldn_t_load_the_delicious_recipes_for_you_n_please_check_your_connection_and_try_again">We couldn\'t load the delicious recipes for you.\n Please check your connection and try again.</string>
    <string name="oops_something_went_n_wrong">Oops! Something went \n wrong .</string>
    <string name="remove_from_favorites">Remove from Favorites?</string>
    <string name="are_you_sure_you_want_to_remove_this_delicious_recipe_from_your_favorites">Are you sure you want to remove this delicious recipe from your favorites?</string>
</resources>