<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".RegisterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3" />

    <ImageView
        android:id="@+id/signUpPageImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/register_image"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/signUpPageTitle"
        style="@style/Text.OmAhmed.AuthTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpPageImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpFullName"
        style="@style/Widget.OmAhmed.InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpPageTitle">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.OmAhmed.InputEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/full_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpEmail"
        style="@style/Widget.OmAhmed.InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/signUpFullName"
        app:layout_constraintStart_toStartOf="@id/signUpFullName"
        app:layout_constraintTop_toBottomOf="@id/signUpFullName">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.OmAhmed.InputEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/singUpPassword"
        style="@style/Widget.OmAhmed.InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@id/signUpEmail"
        app:layout_constraintStart_toStartOf="@id/signUpEmail"
        app:layout_constraintTop_toBottomOf="@id/signUpEmail">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.OmAhmed.InputEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signUpButton"
        style="@style/Text.OmAhmed.onBoardingButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/singUpPassword"
        app:layout_constraintStart_toStartOf="@id/singUpPassword"
        app:layout_constraintTop_toBottomOf="@id/singUpPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpGoogleButton"
        style="@style/Widget.OmAhmed.SocialButton"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/google"
        app:icon="@drawable/google_icon"
        app:layout_constraintEnd_toStartOf="@+id/signUpFacebookButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/signUpButton"
        app:layout_constraintTop_toBottomOf="@id/signUpButton"
        app:rippleColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpFacebookButton"
        style="@style/Widget.OmAhmed.SocialButton"
        android:layout_marginStart="8dp"
        android:text="@string/facebook"
        app:icon="@drawable/facebook_icon"
        app:layout_constraintEnd_toEndOf="@id/signUpButton"
        app:layout_constraintStart_toEndOf="@id/signUpGoogleButton"
        app:layout_constraintTop_toTopOf="@id/signUpGoogleButton" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpGoogleButton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans"
            android:text="@string/already_have_an_account"
            android:textColor="@color/oriental_pink"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/loginTextAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:text="@string/login"
            android:textColor="@color/button_color"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>